Wed Sep  5 20:09:09 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Stream.inl (recv_i): Added back in logic to wait
          for data available to receive when called with a timeout. Thanks
          to Ossama Othman for helping to sort this out. For reference, the
          issues involved here are well-explained in "SSL and TLS" by
          Eric Rescorla, section 8.9.

        * ace/SSL/SSL_SOCK_Stream.cpp (recv_n): Removed the hack-y retry on
          EWOULDBLOCK - the proper handling of timeouts is now in its proper
          place in recv_i() - see above.

Mon Dec  5 22:23:25 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/DLL.h:
        * ace/DLL_Manager.h: Corrected and expanded the descriptions of how
          DLL/library names are handled, decorated, and located.

Wed Jun 29 20:47:33 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/Select_Reactor_T.cpp:
        * ace/TP_Reactor.cpp:
        * ace/Dev_Poll_Reactor.cpp:
        * ace/WFMO_Reactor.cpp:
          In handle_events(), if returning -1 because the reactor isn't
          ready to handle events, also set errno to ESHUTDOWN to tell the
          caller why. Fixes Bugzilla #3974.

Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added command settings for
          preprocessing C and C++ source files.

        * include/makeinclude/rules.local.GNU: Added rules to preprocess
          C and C++ files when directed.
        
          These allow one to now quickly produce a preprocessed version of
          a source file. Ala... make -f GNUmakefile.ACE ACE.i
          would preprocess ACE.cpp and put the result in ACE.i.

Fri Apr 29 14:01:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc: For Message_Queue_Test add -bmaxdata:0x20000000 to
          linker options to extend the available data space at run time.