@@ -1,3 +1,10 @@
+Tue Nov 20 23:55:57 UTC 2012  Steve Huston  <shuston@riverace.com>
+
+        * ace/config-hpux-11.00.h:
+        * ace/OS_NS_netdb.inl: Although HP-UX 11 doesn't have the _r
+          netdb calls, the regular ones are reentrant for multiple threads.
+          Therefore, do not use the mutex-acquiring wrapper for HP-UX 11.
+
 Wed Sep  5 20:09:09 UTC 2012  Steve Huston  <shuston@riverace.com>
 
         * ace/SSL/SSL_SOCK_Stream.inl (recv_i): Added back in logic to wait
